--- a/Pipfile
+++ b/Pipfile
@@ -15,12 +15,12 @@ asn1crypto = "==1.4.0"
 cosmpy = "==0.3.1"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
-open-aea = {version = "==1.26.0", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.26.0"
-open-aea-ledger-cosmos = "==1.26.0"
-open-aea-cli-ipfs = "==1.26.0"
-open-aea-test-autonomy = "==0.6.0"
-open-autonomy = {version = "==0.6.0", extras = [ "all"]}
+open-aea = {version = "==1.27.0.post1", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.27.0"
+open-aea-ledger-cosmos = "==1.27.0"
+open-aea-cli-ipfs = "==1.27.0.post4"
+open-aea-test-autonomy = "==0.7.0"
+open-autonomy = {version = "==0.7.0", extras = [ "all"]}
 protobuf = "==3.19.4"
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
