fix: breaking changes from autonomy bump `0.6.0` -> `0.7.0`

--- a/packages/valory/skills/oracle_abci/skill.yaml
+++ b/packages/valory/skills/oracle_abci/skill.yaml
@@ -122,6 +122,8 @@ models:
       service_id: price_estimation
       service_registry_address: null
       setup:
+        all_participants:
+          - {}
         oracle_contract_address: []
         safe_contract_address: []
       share_tm_config_on_startup: false
