--- a/packages/valory/skills/price_estimation_abci/skill.yaml
+++ b/packages/valory/skills/price_estimation_abci/skill.yaml
@@ -126,6 +126,8 @@ models:
       service_id: price_estimation
       service_registry_address: null
       setup:
+        all_participants:
+          - {}
         oracle_contract_address: []
         safe_contract_address: []
       sleep_time: 1
