fix: e2e tests after bumping to `open-autonomy v0.7.0`

--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,7 @@ commands =
 [commands-e2e]
 commands =
     {[commands-base]commands}
-    autonomy test by-path packages/valory/agents/oracle
+    pytest packages/valory/agents/oracle/tests/test_oracle.py::TestABCIPriceEstimationSingleAgent
 
 [testenv:py3.7-linux]
 basepython = python3.7
