test: run all the e2e tests not just the single-agent one

--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,7 @@ commands =
 [commands-e2e]
 commands =
     {[commands-base]commands}
-    pytest packages/valory/agents/oracle/tests/test_oracle.py::TestABCIPriceEstimationSingleAgent
+    pytest packages/valory/agents/oracle/tests/test_oracle.py
 
 [testenv:py3.7-linux]
 basepython = python3.7
