--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
-site_name: product/price-oracle #Required format to work with monorepo including a specific route in the address.
-site_url: https://docs.autonolas.network/product/price-oracle/
-site_description: Developer documentation of Autonolas Price Oracle.
-repo_url: https://github.com/valory-xyz/price-oracle
+site_name: product/oraclekit #Required format to work with monorepo including a specific route in the address.
+site_url: https://docs.autonolas.network/product/oraclekit/
+site_description: Autonolas OracleKit developer documentation
+repo_url: https://github.com/valory-xyz/oraclekit
 site_author: developer@valory.xyz
 edit_uri: ""
 copyright:  Copyright &copy; 2021 - 2023 Valory AG 
@@ -29,7 +29,7 @@ extra_css:
  
 
 nav:
-  - Price Oracle: 'index.md' 
+  - OracleKit: 'index.md' 
 
   
 plugins:
