--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ setenv =
 
 [commands-base]
 commands =
-    autonomy init --reset --author CI --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
+    autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
 
 [commands-packages]
@@ -290,7 +290,7 @@ skipsdist = True
 usedevelop = True
 deps = open-autonomy[all]==0.8.0
 commands =
-    autonomy init --reset --author CI --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
+    autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
     autonomy packages lock --check
 
@@ -299,7 +299,7 @@ skipsdist = True
 usedevelop = True
 deps = {[deps-packages]deps}
 commands =
-    autonomy init --reset --author CI --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
+    autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
     autonomy check-packages
 
@@ -392,7 +392,7 @@ commands =
 skipsdist = True
 usedevelop = True
 commands =
-    autonomy init --reset --author CI --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
+    autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
     autonomy analyse fsm-specs
 
