--- a/packages/valory/services/oracle_goerli/service.yaml
+++ b/packages/valory/services/oracle_goerli/service.yaml
@@ -14,6 +14,11 @@ extra:
   params_args:
     args:
       setup: &id001
+        all_participants:
+        - - '0xB51D93A8A1E67c3Db8f9dE5ff89BB2d6525c6aD0'
+          - '0x77E9b2EF921253A171Fa0CB9ba80558648Ff7215'
+          - '0x91B22F6957fE459e471C52Cdaba1D3c8eC95d2d3'
+          - '0x7E07817939c1dBAaBea9Dc56220549539DE1aFC6'
         safe_contract_address:
         - '0x623cE6087190B53520f00609d41d79e5B71B881F'
         oracle_contract_address:
