--- a/packages/valory/services/oracle_polygon/service.yaml
+++ b/packages/valory/services/oracle_polygon/service.yaml
@@ -14,6 +14,11 @@ extra:
   params_args:
     args: &id001
       setup:
+        all_participants:
+        - - '0xe6b7e278a184b1183f743380D9Ef12167cDe37c6'
+          - '0x4b23D773D0e9469d1f92DC8B0eC8A8B19Cfa1771'
+          - '0xAD56A50628D4915E841b7C2eCE13b33793b365d0'
+          - '0x5eF6567079c6c26d8ebf61AC0716163367E9B3cf'
         safe_contract_address:
         - '0x37ba5291A5bE8cbE44717a0673fe2c5a45B4B6A8'
         oracle_contract_address:
