--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -124,6 +124,7 @@ models:
       consensus:
         max_participants: ${MAX_PARTICIPANTS:int:4}
       setup:
+        all_participants: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_ALL_PARTICIPANTS:list:[]}
         safe_contract_address: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_SAFE_CONTRACT_ADDRESS:list:[]}
         oracle_contract_address: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_ORACLE_CONTRACT_ADDRESS:list:[]}
       round_timeout_seconds: ${ORACLE_PARAMS_ROUND_TIMEOUT_SECONDS:float:35.0}
