chore: ignore third party packages introduced on a87588ec

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,13 @@ leak_report
 packages/valory/connections
 packages/valory/contracts/gnosis_safe
 packages/valory/contracts/gnosis_safe_proxy_factory
+packages/valory/contracts/multisend
 packages/valory/contracts/service_registry
 packages/valory/protocols
 packages/valory/skills/abstract_abci
 packages/valory/skills/abstract_round_abci
 packages/valory/skills/registration_abci
 packages/valory/skills/reset_pause_abci
+packages/valory/skills/termination_abci
 packages/valory/skills/transaction_settlement_abci
 packages/open_aea
