--- a/Pipfile
+++ b/Pipfile
@@ -15,12 +15,12 @@ asn1crypto = "==1.4.0"
 cosmpy = "==0.3.1"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
-open-aea = {version = "==1.28.0.post1", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.28.0.post1"
-open-aea-ledger-cosmos = "==1.28.0.post1"
-open-aea-cli-ipfs = "==1.28.0.post1"
-open-aea-test-autonomy = "==0.8.0"
-open-autonomy = {version = "==0.8.0", extras = [ "all"]}
+open-aea = {version = "==1.29.0", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.29.0"
+open-aea-ledger-cosmos = "==1.29.0"
+open-aea-cli-ipfs = "==1.29.0"
+open-aea-test-autonomy = "==0.9.0"
+open-autonomy = {version = "==0.9.0", extras = [ "all"]}
 protobuf = "==3.19.4"
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
