--- a/packages/valory/services/oracle_polygon/service.yaml
+++ b/packages/valory/services/oracle_polygon/service.yaml
@@ -23,6 +23,8 @@ extra:
         - '0x37ba5291A5bE8cbE44717a0673fe2c5a45B4B6A8'
         oracle_contract_address:
         - '0x3d9e92B0FE7673ddA3d7C33B9ff302768A03de19'
+        consensus_threshold:
+        - null
       max_healthcheck: 43200
       observation_interval: 3000
       broadcast_to_server: true
