--- a/packages/valory/skills/oracle_abci/skill.yaml
+++ b/packages/valory/skills/oracle_abci/skill.yaml
@@ -137,6 +137,8 @@ models:
         - - '0x0000000000000000000000000000000000000000'
         oracle_contract_address: []
         safe_contract_address: []
+        consensus_threshold:
+        - null
       share_tm_config_on_startup: false
       sleep_time: 1
       tendermint_check_sleep_delay: 3
