--- a/setup.cfg
+++ b/setup.cfg
@@ -80,6 +80,9 @@ ignore_errors=True
 [mypy-packages.valory.skills.transaction_settlement_abci.*]
 ignore_errors=True
 
+[mypy-packages.fetchai.connections.http_server.*]
+ignore_errors=True
+
 [mypy-requests]
 ignore_missing_imports=True
 
@@ -121,6 +124,19 @@ ignore_missing_imports = True
 
 [mypy-py_eth_sig_utils.*]
 ignore_missing_imports = True
+
+[mypy-openapi_core.*]
+ignore_missing_imports = True
+
+[mypy-openapi_spec_validator.*]
+ignore_missing_imports = True
+
+[mypy-aiohttp.*]
+ignore_missing_imports = True
+
+[mypy-werkzeug.*]
+ignore_missing_imports = True
+
 
 [darglint]
 docstring_style=sphinx
