--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,9 @@ deps =
     py-eth-sig-utils==0.4.0
     scikit-learn==1.0.2
     statsmodels==0.13.2
+    # for http server connection
+    openapi-core==0.13.2
+    openapi-spec-validator==0.2.8
 
 [deps-base]
 deps ={[deps-packages]deps}
@@ -77,6 +80,7 @@ commands =
     pytest -rfE packages/valory/skills/oracle_abci/tests --cov=packages/valory/skills/oracle_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/oracle_deployment_abci/tests --cov=packages/valory/skills/oracle_deployment_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/price_estimation_abci/tests --cov=packages/valory/skills/price_estimation_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
+    pytest -rfE packages/valory/skills/http_server_data/tests --cov=packages/valory/skills/http_server_data --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
 
 [commands-e2e]
 commands =
@@ -236,6 +240,7 @@ commands =
     bandit -s B101 -r packages/valory/skills/oracle_abci
     bandit -s B101 -r packages/valory/skills/oracle_deployment_abci
     bandit -s B101 -r packages/valory/skills/price_estimation_abci
+    bandit -s B101 -r packages/valory/skills/http_server_data
     bandit -s B101 -r scripts
 
 [testenv:black]
@@ -244,7 +249,7 @@ skip_install = True
 deps =
     tomte[black]==0.2.2
 commands =
-    black packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    black packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
 
 [testenv:black-check]
 skipsdist = True
@@ -252,7 +257,7 @@ skip_install = True
 deps =
     tomte[black]==0.2.2
 commands =
-    black --check packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    black --check packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
 
 [testenv:isort]
 skipsdist = True
@@ -316,7 +321,7 @@ skip_install = True
 deps =
     tomte[flake8]==0.2.2
 commands =
-    flake8 packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    flake8 packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
 
 [testenv:mypy]
 skipsdist = True
@@ -324,7 +329,7 @@ skip_install = True
 deps =
     tomte[mypy]==0.2.2
 commands =
-    mypy packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts --disallow-untyped-defs
+    mypy packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts --disallow-untyped-defs
 
 [testenv:pylint]
 whitelist_externals = /bin/sh
@@ -333,7 +338,7 @@ deps =
     {[deps-packages]deps}
     tomte[pylint]==0.2.2
 commands =
-    pylint --rcfile=setup.cfg packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    pylint --rcfile=setup.cfg packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
 
 [testenv:safety]
 skipsdist = True
@@ -356,7 +361,7 @@ skip_install = True
 deps =
     tomte[darglint]==0.2.2
 commands =
-    darglint packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    darglint packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
 
 [testenv:check-generate-all-protocols]
 skipsdist = True
@@ -400,7 +405,7 @@ commands =
 skipsdist = True
 usedevelop = True
 commands =
-    autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci
+    autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci -i http_server_data
 
 [testenv:check-doc-links-hashes]
 skipsdist = True
