--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,9 @@ py-eth-sig-utils = "==0.4.0"
 ### tests deps
 mistune = "==2.0.3"
 tomte = {version = "==0.2.2", extras = ["tox", "tests"]}
+# for http server connection
+openapi-core = "==0.13.2"
+openapi-spec-validator = "==0.2.8"
 
 [requires]
 python_version = "3.10"
