--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ packages/valory/skills/reset_pause_abci
 packages/valory/skills/termination_abci
 packages/valory/skills/transaction_settlement_abci
 packages/open_aea
+temp/
