--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ extra:
   open_autonomy: '[Open Autonomy](https://github.com/valory-xyz/open-autonomy)'
   open_autonomy_api: '[Open Autonomy API](https://docs.autonolas.network/)'
   on_chain_frontend: '[on-chain protocol frontend](https://protocol.autonolas.network/)'
+  set_up_system: '[setup](https://docs.autonolas.network/open-autonomy/guides/set_up/)'
   social:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/autonolas
