--- a/packages/valory/services/oracle_hardhat/service.yaml
+++ b/packages/valory/services/oracle_hardhat/service.yaml
@@ -14,14 +14,19 @@ extra:
   setup_args:
     args: &id001
       setup:
-        all_participants: ${ALL_PARTICIPANTS:list:[]}
-        safe_contract_address: ${SAFE_CONTRACT_ADDRESS:list:["0xD8dE647170163a981bb3Fdb2063583eAcF7D55AC"]}
-        oracle_contract_address: ${ORACLE_CONTRACT_ADDRESS:list:[]}
+        all_participants:
+        - - '0x15d34AAf54267DB7D7c367839AAf71A00a2C6A65'
+          - '0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc'
+          - '0x976EA74026E726554dB657fA54763abd0C3a0aa9'
+          - '0x14dC79964da2C08b23698B3D3cc7Ca32193d9955'
+        safe_contract_address:
+        - '0xD8dE647170163a981bb3Fdb2063583eAcF7D55AC'
+        oracle_contract_address: []
       observation_interval: 30
       broadcast_to_server: false
       service_registry_address: '0x998abeb3E57409262aE5b751f60747921B33613E'
-      share_tm_config_on_startup: ${SHARE_TM_CONFIG_ON_STARTUP:bool:false}
-      on_chain_service_id: ${SERVICE_ID:int:1}
+      share_tm_config_on_startup: false
+      on_chain_service_id: 1
   benchmark_persistence_params:
     args: &id002
       log_dir: /benchmarks
