--- a/packages/valory/services/oracle_polygon/service.yaml
+++ b/packages/valory/services/oracle_polygon/service.yaml
@@ -41,10 +41,8 @@ type: skill
         url: https://api.coingecko.com/api/v3/simple/price
         api_id: coingecko
         parameters:
-        - - ids
-          - bitcoin
-        - - vs_currencies
-          - usd
+          ids: bitcoin
+          vs_currencies: usd
         response_key: bitcoin:usd
     randomness_api:
       args:
@@ -61,8 +59,7 @@ type: skill
         url: https://api.kraken.com/0/public/Ticker
         api_id: kraken
         parameters:
-        - - pair
-          - BTCUSD
+          pair: BTCUSD
         response_key: result:XXBTZUSD:b
         response_index: 0
     randomness_api:
@@ -95,8 +92,7 @@ type: skill
         url: https://api.binance.com/api/v3/ticker/price
         api_id: binance
         parameters:
-        - - symbol
-          - BTCUSDT
+          symbol: BTCUSDT
         response_key: price
     randomness_api:
       args:
