--- a/packages/valory/services/oracle_ropsten_cluster/service.yaml
+++ b/packages/valory/services/oracle_ropsten_cluster/service.yaml
@@ -33,12 +33,10 @@ type: skill
         url: https://api.coingecko.com/api/v3/simple/price
         api_id: coingecko
         parameters:
-        - - ids
-          - bitcoin
-        - - vs_currencies
-          - usd
+          ids: bitcoin
+          vs_currencies: usd
         response_key: bitcoin:usd
-        headers: []
+        headers: {}
     randomness_api:
       args:
         url: https://drand.cloudflare.com/public/latest
@@ -54,8 +52,7 @@ type: skill
         url: https://api.kraken.com/0/public/Ticker
         api_id: kraken
         parameters:
-        - - pair
-          - BTCUSD
+          pair: BTCUSD
         response_key: result:XXBTZUSD:b
         response_index: 0
     randomness_api:
@@ -73,8 +70,8 @@ type: skill
         url: https://api.coinbase.com/v2/prices/BTC-USD/buy
         api_id: coinbase
         response_key: data:amount
-        headers: []
-        parameters: []
+        headers: {}
+        parameters: {}
     randomness_api:
       args:
         url: https://api2.drand.sh/public/latest
@@ -90,10 +87,9 @@ type: skill
         url: https://api.binance.com/api/v3/ticker/price
         api_id: binance
         parameters:
-        - - symbol
-          - BTCUSDT
+          symbol: BTCUSDT
         response_key: price
-        headers: []
+        headers: {}
     randomness_api:
       args:
         url: https://api3.drand.sh/public/latest
