fix: release workflow
The default user was `user` so we had to use the `$AUTHOR` env var and reset the autonomy configurations in order for the images to be built correctly.

[no ci]

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,6 +76,7 @@ jobs:
               cd /work
               source env.sh || exit 1
               echo "Building images for $AUTHOR for service $SERVICE"
+              autonomy init --reset --author $AUTHOR --ipfs --remote
               autonomy fetch $AUTHOR/$SERVICE --service --local || exit 1
               cd $SERVICE || exit 1
               autonomy build-image || exit 1
