--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,6 @@ commands =
     pytest -rfE packages/valory/skills/oracle_abci/tests --cov=packages/valory/skills/oracle_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/oracle_deployment_abci/tests --cov=packages/valory/skills/oracle_deployment_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
     pytest -rfE packages/valory/skills/price_estimation_abci/tests --cov=packages/valory/skills/price_estimation_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
-    pytest -rfE packages/valory/skills/http_server_data/tests --cov=packages/valory/skills/http_server_data --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
 
 [commands-e2e]
 commands =
@@ -240,7 +239,6 @@ commands =
     bandit -s B101 -r packages/valory/skills/oracle_abci
     bandit -s B101 -r packages/valory/skills/oracle_deployment_abci
     bandit -s B101 -r packages/valory/skills/price_estimation_abci
-    bandit -s B101 -r packages/valory/skills/http_server_data
     bandit -s B101 -r scripts
 
 [testenv:black]
@@ -249,7 +247,7 @@ skip_install = True
 deps =
     tomte[black]==0.2.2
 commands =
-    black packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
+    black packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
 
 [testenv:black-check]
 skipsdist = True
@@ -257,7 +255,7 @@ skip_install = True
 deps =
     tomte[black]==0.2.2
 commands =
-    black --check packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
+    black --check packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci
 
 [testenv:isort]
 skipsdist = True
@@ -321,7 +319,7 @@ skip_install = True
 deps =
     tomte[flake8]==0.2.2
 commands =
-    flake8 packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
+    flake8 packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
 
 [testenv:mypy]
 skipsdist = True
@@ -329,7 +327,7 @@ skip_install = True
 deps =
     tomte[mypy]==0.2.2
 commands =
-    mypy packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts --disallow-untyped-defs
+    mypy packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts --disallow-untyped-defs
 
 [testenv:pylint]
 whitelist_externals = /bin/sh
@@ -338,7 +336,7 @@ deps =
     {[deps-packages]deps}
     tomte[pylint]==0.2.2
 commands =
-    pylint --rcfile=setup.cfg packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
+    pylint --rcfile=setup.cfg packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
 
 [testenv:safety]
 skipsdist = True
@@ -361,7 +359,7 @@ skip_install = True
 deps =
     tomte[darglint]==0.2.2
 commands =
-    darglint packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci packages/valory/skills/http_server_data scripts
+    darglint packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
 
 [testenv:check-generate-all-protocols]
 skipsdist = True
@@ -405,7 +403,7 @@ commands =
 skipsdist = True
 usedevelop = True
 commands =
-    autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci -i http_server_data
+    autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci
 
 [testenv:check-doc-links-hashes]
 skipsdist = True
