--- a/packages/valory/services/oracle_goerli/service.yaml
+++ b/packages/valory/services/oracle_goerli/service.yaml
@@ -52,7 +52,7 @@ type: skill
         observation_interval: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
-        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
+        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:1}
         service_registry_address: '0x1cEe30D08943EB58EFF84DD1AB44a6ee6FEff63a'
     server_api:
       args: *id002
@@ -79,7 +79,7 @@ type: skill
         observation_interval: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
-        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
+        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:1}
         service_registry_address: '0x1cEe30D08943EB58EFF84DD1AB44a6ee6FEff63a'
     server_api:
       args: *id002
@@ -105,7 +105,7 @@ type: skill
         observation_interval: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
-        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
+        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:1}
         service_registry_address: '0x1cEe30D08943EB58EFF84DD1AB44a6ee6FEff63a'
     server_api:
       args: *id002
@@ -132,7 +132,7 @@ type: skill
         observation_interval: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
-        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
+        on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:1}
         service_registry_address: '0x1cEe30D08943EB58EFF84DD1AB44a6ee6FEff63a'
     server_api:
       args: *id002
