--- a/tox.ini
+++ b/tox.ini
@@ -419,3 +419,11 @@ skipsdist = True
 skip_install = True
 commands =
     {toxinidir}/scripts/check_doc_ipfs_hashes.py --fix
+
+[testenv:liccheck]
+skipsdist = True
+usedevelop = True
+deps =
+    tomte[liccheck]==0.2.4
+commands = {toxinidir}/scripts/freeze_dependencies.py -o {envtmpdir}/requirements.txt
+           liccheck -s liccheck.ini -r {envtmpdir}/requirements.txt -l PARANOID
