--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,9 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy==1.21.6
-    open-aea-ledger-cosmos==1.29.0
-    open-aea-test-autonomy==0.9.1
-    open-autonomy[all]==0.9.1
+    open-aea-ledger-cosmos==1.31.0
+    open-aea-test-autonomy==0.10.0.post1
+    open-autonomy[all]==0.10.0.post1
     pandas==1.3.5
     pandas-stubs==1.2.0.62
     protobuf==3.19.4
@@ -291,7 +291,7 @@ commands = {toxinidir}/scripts/check_copyright.py
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.9.1
+deps = open-autonomy[all]==0.10.0.post1
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
