--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -83,8 +83,8 @@ public_id: valory/abci:0.1.0
 type: connection
 config:
   target_skill_id: valory/oracle_abci:0.1.0
-  host: ${ABCI_HOST:str:localhost}
-  port: ${ABCI_PORT:int:26658}
+  host: ${str:localhost}
+  port: ${int:26658}
   use_tendermint: ${ABCI_USE_TENDERMINT:bool:false}
 ---
 public_id: valory/p2p_libp2p_client:0.1.0
@@ -128,15 +128,15 @@ models:
   params:
     args:
       setup:
-        all_participants: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_ALL_PARTICIPANTS:list:[]}
-        safe_contract_address: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_SAFE_CONTRACT_ADDRESS:list:[]}
-        oracle_contract_address: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SETUP_ORACLE_CONTRACT_ADDRESS:list:[]}
-        consensus_threshold: ${list:[null]}
+        all_participants: ${list:[]}
+        safe_contract_address: ${str:null}
+        oracle_contract_address: ${str:null}
+        consensus_threshold: ${int:null}
       round_timeout_seconds: ${ORACLE_PARAMS_ROUND_TIMEOUT_SECONDS:float:35.0}
       tendermint_url: ${TENDERMINT_URL:str:http://localhost:26657}
       tendermint_com_url: ${TENDERMINT_COM_URL:str:http://localhost:8080}
       reset_tendermint_after: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_RESET_TENDERMINT_AFTER:int:10}
-      observation_interval: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_OBSERVATION_INTERVAL:int:300}
+      reset_pause_duration: ${int:300}
       max_healthcheck: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_MAX_HEALTHCHECK:int:1200}
       multisend_address: ${str:'0x0000000000000000000000000000000000000000'}
       broadcast_to_server: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_BROADCAST_TO_SERVER:bool:false}
@@ -147,6 +147,7 @@ models:
       share_tm_config_on_startup: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_SHARE_TM_CONFIG_ON_STARTUP:bool:false}
       on_chain_service_id: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_ON_CHAIN_SERVICE_ID:int:none}
       init_fallback_gas: ${SKILL_ORACLE_ABCI_MODELS_PARAMS_ARGS_INIT_FALLBACK_GAS:int:270000}
+      use_termination: ${bool:false}
   server_api:
     args:
       url: ${SKILL_ORACLE_ABCI_MODELS_SERVER_API_ARGS_URL:str:http://192.168.2.17:9999/deposit}
