--- a/packages/valory/services/oracle_goerli/service.yaml
+++ b/packages/valory/services/oracle_goerli/service.yaml
@@ -9,20 +9,19 @@ fingerprint:
 fingerprint_ignore_patterns: []
 agent: valory/oracle:0.1.0:bafybeigtxage6dvvpers2q4sq3b53csy2obgwzy5rbooxygfcrd2p5yy5m
 number_of_agents: 4
+deployment: {}
 ---
 extra:
   params_args:
     args:
       setup: &id001
         all_participants:
-        - - '0xB51D93A8A1E67c3Db8f9dE5ff89BB2d6525c6aD0'
-          - '0x77E9b2EF921253A171Fa0CB9ba80558648Ff7215'
-          - '0x91B22F6957fE459e471C52Cdaba1D3c8eC95d2d3'
-          - '0x7E07817939c1dBAaBea9Dc56220549539DE1aFC6'
-        safe_contract_address:
-        - '0x623cE6087190B53520f00609d41d79e5B71B881F'
-        oracle_contract_address:
-        - '0xA2b06beb69b5e454759976ABa7555e2639c0522f'
+        - '0xB51D93A8A1E67c3Db8f9dE5ff89BB2d6525c6aD0'
+        - '0x77E9b2EF921253A171Fa0CB9ba80558648Ff7215'
+        - '0x91B22F6957fE459e471C52Cdaba1D3c8eC95d2d3'
+        - '0x7E07817939c1dBAaBea9Dc56220549539DE1aFC6'
+        safe_contract_address: '0x623cE6087190B53520f00609d41d79e5B71B881F'
+        oracle_contract_address: '0xA2b06beb69b5e454759976ABa7555e2639c0522f'
   valory_monitoring_backend:
     args: &id002
       url: https://oracle-server.staging.autonolas.tech/deposit
@@ -49,7 +48,7 @@ type: skill
         max_healthcheck: 43200
         multisend_address: '0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_0:str:node0:26656}
-        observation_interval: 3000
+        reset_pause_duration: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
         on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
@@ -76,7 +75,7 @@ type: skill
         max_healthcheck: 43200
         multisend_address: '0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_1:str:node1:26666}
-        observation_interval: 3000
+        reset_pause_duration: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
         on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
@@ -102,7 +101,7 @@ type: skill
         max_healthcheck: 43200
         multisend_address: '0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_2:str:node2:26676}
-        observation_interval: 3000
+        reset_pause_duration: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
         on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
@@ -129,7 +128,7 @@ type: skill
         max_healthcheck: 43200
         multisend_address: '0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_3:str:node3:26686}
-        observation_interval: 3000
+        reset_pause_duration: 3000
         broadcast_to_server: true
         share_tm_config_on_startup: ${USE_ACN:bool:false}
         on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
