--- a/packages/valory/services/oracle_hardhat/service.yaml
+++ b/packages/valory/services/oracle_hardhat/service.yaml
@@ -9,19 +9,19 @@ fingerprint:
 fingerprint_ignore_patterns: []
 agent: valory/oracle:0.1.0:bafybeigtxage6dvvpers2q4sq3b53csy2obgwzy5rbooxygfcrd2p5yy5m
 number_of_agents: 4
+deployment: {}
 ---
 extra:
   setup_args:
     args: &id001
       setup:
         all_participants:
-        - - '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266'
-          - '0x70997970C51812dc3A010C7d01b50e0d17dc79C8'
-          - '0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC'
-          - '0x90F79bf6EB2c4f870365E785982E1f101E93b906'
-        safe_contract_address:
-        - '0xD8dE647170163a981bb3Fdb2063583eAcF7D55AC'
-      observation_interval: 30
+        - '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266'
+        - '0x70997970C51812dc3A010C7d01b50e0d17dc79C8'
+        - '0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC'
+        - '0x90F79bf6EB2c4f870365E785982E1f101E93b906'
+        safe_contract_address: '0xD8dE647170163a981bb3Fdb2063583eAcF7D55AC'
+      reset_pause_duration: 30
       broadcast_to_server: false
       service_registry_address: '0x998abeb3E57409262aE5b751f60747921B33613E'
       on_chain_service_id: 1
