--- a/packages/valory/services/oracle_polygon/service.yaml
+++ b/packages/valory/services/oracle_polygon/service.yaml
@@ -9,24 +9,22 @@ fingerprint:
 fingerprint_ignore_patterns: []
 agent: valory/oracle:0.1.0:bafybeigtxage6dvvpers2q4sq3b53csy2obgwzy5rbooxygfcrd2p5yy5m
 number_of_agents: 4
+deployment: {}
 ---
 extra:
   params_args:
     args: &id001
       setup:
         all_participants:
-        - - '0xe6b7e278a184b1183f743380D9Ef12167cDe37c6'
-          - '0x4b23D773D0e9469d1f92DC8B0eC8A8B19Cfa1771'
-          - '0xAD56A50628D4915E841b7C2eCE13b33793b365d0'
-          - '0x5eF6567079c6c26d8ebf61AC0716163367E9B3cf'
-        safe_contract_address:
-        - '0x37ba5291A5bE8cbE44717a0673fe2c5a45B4B6A8'
-        oracle_contract_address:
-        - '0x3d9e92B0FE7673ddA3d7C33B9ff302768A03de19'
-        consensus_threshold:
-        - null
+        - '0xe6b7e278a184b1183f743380D9Ef12167cDe37c6'
+        - '0x4b23D773D0e9469d1f92DC8B0eC8A8B19Cfa1771'
+        - '0xAD56A50628D4915E841b7C2eCE13b33793b365d0'
+        - '0x5eF6567079c6c26d8ebf61AC0716163367E9B3cf'
+        safe_contract_address: '0x37ba5291A5bE8cbE44717a0673fe2c5a45B4B6A8'
+        oracle_contract_address: '0x3d9e92B0FE7673ddA3d7C33B9ff302768A03de19'
+        consensus_threshold: null
       max_healthcheck: 43200
-      observation_interval: 3000
+      reset_pause_duration: 3000
       broadcast_to_server: true
       validate_timeout: 300
   valory_monitoring_backend:
